--- a/index.html
+++ b/index.html
@@ -4,8 +4,154 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Croath.github.io : ">
+    <meta name="description" content="Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
 
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.Make sure you’re eligible.
+To apply, you must be a full or part-time student, 13 years of age or older, and registered for free as an Apple developer. If you are 13-17 years old, your parent or guardian will need to register and share their account with you. They will be able to provide your name as the attendee during registration.
+
+Create an app.
+This is your chance to showcase your talent with a thoughtful, engaging, well-made app. The content of your app should highlight development projects you’ve worked on, your educational and professional background, technical skills, and interests.
+
+Submit your information.
+To prepare for your submission, please review the Student Scholarship Guidelines and Terms below for complete details. You will need to provide proof of enrollment from your school when you submit your application. All applications must be submitted by April 14 at 5:00 p.m. PDT.">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>Croath.github.io</title>
