--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="player">
     <meta name="twitter:site" content="@nytimes">
     <meta name="twitter:creator" content="@SarahMaslinNir">
     <meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
