--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta name="twitter:creator" content="@SarahMaslinNir">
     <meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
     <meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here.">
-    <meta name="twitter:image" content="http://img.gifmagazine.net/gifmagazine/images/542354/original.gif">
+    <meta name="twitter:player" content="https://imgflip.com/gif/vfs9p">
+    <meta name="twitter:image" content="https://imgflip.com/gif/vfs9p">
+    <meta name="twitter:player:width" value="320">
+    <meta name="twitter:player:height" value="320">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -36,6 +39,7 @@
 <a id="all" class="anchor" href="#all" aria-hidden="true"><span class="octicon octicon-link"></span></a>All</h3>
 
 <p>My homepage: <a href="http://croath.com">croath.com</a></p>
+<img id="gif" src="https://imgflip.com/gif/vfs9p" width="100%">
       </section>
     </div>
 
