--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a id="all" class="anchor" href="#all" aria-hidden="true"><span class="octicon octicon-link"></span></a>All</h3>
 
 <p>My homepage: <a href="http://croath.com">croath.com</a></p>
-<img id="gif" src="https://imgflip.com/gif/vfs9p" width="100%">
+<img id="gif" src="https://i.imgur.com/HZvOArE.gif" width="100%">
       </section>
     </div>
 
