Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="twitter:card" content="player">
-    <meta name="twitter:site" content="@nytimes">
-    <meta name="twitter:creator" content="@SarahMaslinNir">
-    <meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
-    <meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here.">
-    <meta name="twitter:player" content="https://i.imgur.com/HZvOArE.gif">
-    <meta name="twitter:image" content="https://i.imgur.com/HZvOArE.gif">
-    <meta name="twitter:player:width" value="320">
-    <meta name="twitter:player:height" value="320">
+    <meta name="description" content="Croath.github.io : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>http://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.iohttp://croath.github.io</title>
+    <title>Croath.github.io</title>
   </head>
 
   <body>
@@ -38,15 +30,14 @@
         <h3>
 <a id="all" class="anchor" href="#all" aria-hidden="true"><span class="octicon octicon-link"></span></a>All</h3>
 
-<p>My homepage: <a href="http://croath.com">croath.com</a></p>
-<img id="gif" src="https://i.imgur.com/HZvOArE.gif" width="100%">
+<p>Hey what's up dude</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
