--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Croath.github.io : ">
+    <meta name="twitter:card" content="player">
+    <meta name="twitter:site" content="@nytimes">
+    <meta name="twitter:creator" content="@SarahMaslinNir">
+    <meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
+    <meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here.">
+    <meta name="twitter:player" content="https://i.imgur.com/HZvOArE.gif">
+    <meta name="twitter:image" content="https://i.imgur.com/HZvOArE.gif">
+    <meta name="twitter:player:width" value="320">
+    <meta name="twitter:player:height" value="320">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
